Div whitespace fix

--- a/static/css/freelancer.css
+++ b/static/css/freelancer.css
@@ -8,6 +8,10 @@ body {
     overflow-x: hidden;
 }
 
+div{
+    white-space: pre;
+}
+
 p {
     font-size: 20px;
 }
